- Create unit test LeaveTest (https://issues.jboss.org/browse/JGRP-2293) - Replaced base64 conversion via javax.xml.bind with Base64 methods - Moved GmsImpl.leaving and GmsServerImpl.leave_promise to GMS - Added setXmitInterval() to UNICAST3 - Fixed CCME in FD_SOCK, changed suspected_mbrs to concurrent set - Added single-test target to build.xml - Removed -bind_addr from ViewDemo and Draw - Removed setting of system properties external_port and bind_addr in tests - Changed log formatting of message exchanges in NAKACK2 (https://issues.jboss.org/browse/JGRP-2326) - Changed log formatting of message exchanges in UNICAST3 (https://issues.jboss.org/browse/JGRP-2325)